# ai_course

./: .gitignore  AI_with_deep_learning.odt  WeekByWeek_curriculam  Week_1  chapter_1.json  chapter_1.odt  chapter_1.txt  notebook.ipynb  pyproject.toml
