[tool.poetry]
name = "ai-book-creation"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas"]
readme = "README.md"
packages = [{include = "ai_book_creation"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
